# news_ed

./: .gitignore  README.md  pyproject.toml  update-locks.sh  workspace.toml
.github/workflows/: cd.yml  ci.yml  test.yml
bases/news/ui_back/: __init__.py  core.py  main.py
projects/elec_app/: index.html  main.js  package-lock.json  package.json
projects/news_app/: pyproject.toml  runner.py
projects/news_ed_app/: forge.config.ts  package-lock.json  package.json
projects/news_ed_app/src/: index.html  index.ts
projects/news_ed_app/src/services/: factories.ts  poxi_runner.ts
projects/news_ed_app/src/services/controllers/: backend_controller.ts
projects/news_ed_app/src/services/entities/: entities.ts
projects/news_ed_app/src/utiles/: memoize.ts
test/bases/news/ui_back/: test_core.py
